iot-istio/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    name: app-iot
    app: app-iot
spec:
  selector:
    app: app-iot
  type: NodePort
  ports:
  - name: myappserviceport
    protocol: TCP
    port: 8088
    targetPort: 8088
    nodePort: 30888
