iot-istio/app-ingr-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - jadu.ga
      secretName: angular-tls
  rules:
  - host: "jadu.ga"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: istio-ingress-svc
            port:
              number: 80
